--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
-
+    <header class="page-header" >
+      <div class="page-header__inner">
+        <div class="logo">
+          <a href="#"></a>
+        </div>
+        <nav class="main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a href ="#">Каталог товаров</a> </li>
+            <li class="main-nav__item"><a href ="#">Вязание на заказ</a></li>
+            <li class="main-nav__item"><a href ="#">Поиск по сайту</a></li>
+            <li class="main-nav__item"><a href ="#">Корзина: пока пуста</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="page-header__title">
+        <h1>Милые штуки ручной работы для дома</h1>
+      </div>
+      <div class="header-preview">
+        <div class="header-preview__interior">
+          <p class="header-preview__title">
+            Предметы интерьера
+          </p>
+        </div>
+        <div class="header-preview__toys">
+          <p class="header-preview__title">
+            Детские игрушки
+          </p>
+        </div>
+      </div>
+    </page-header>
   </body>
 </html>
