разметка страници index

--- a/index.html
+++ b/index.html
@@ -34,6 +34,112 @@
           </p>
         </div>
       </div>
-    </page-header>
+    </header>
+    <div class="featured">
+      <h2 class="featured__title">Вязаные корзинки</h2>
+      <p class="featured__product-week">Товар недели</p>
+      <div class="feature-product">
+        <p class="feature-product__description">
+          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
+        </p>
+        <div class="product-color">
+          <div class="product-color__name">
+            <p>Цвет:</p>
+          </div>
+          <div class="product-color__value">
+            <p>«Тиффани»/серый</p>
+          </div>
+        </div>
+        <div class="product-diameter">
+          <div class="product-diameter__name">
+            <p>Диаметр:</p>
+          </div>
+          <div class="product-diameter__value">
+            <p>25 см</p>
+          </div>
+        </div>
+        <div class="product-height">
+          <div class="product-height__name">
+            <p>Высота:</p>
+          </div>
+          <div class="product-height__value">
+            <p>15 см</p>
+          </div>
+        </div>
+        <div class="featured__image">
+          <img alt="изображение продукта" src="#" />
+        </div>
+        <span class="featured__price">Цена: 990 руб.</span>
+        <a class="featured__buy">Заказать</a>
+      </div>
+    </div>
+    <div class="about">
+      <h2 class="about__title">Коротко о нас</h2>
+      <div class="about__list">
+        <div class="about__item">
+          <img src="#" alt="цветок" />
+          <p>Экологически чистые материалы</p>
+        </div>
+        <div class="about__item">
+          <img src="#" alt="прямоугольник" />
+          <p>Скандинавский стиль по российской цене</p>
+        </div>
+        <div class="about__item">
+          <img src="#" alt="сердце" />
+          <p>Увеличивает лайки на фотографиях</p>
+        </div>
+        <div class="about__item">
+          <img src="#" alt="пряжа" />
+          <p>Связано вручную с любовью и умилением</p>
+        </div>
+        <div class="about__item">
+          <img src="#" alt="ракета" />
+          <p>Поддержка отечественного производителя</p>
+        </div>
+        <div class="about__item">
+          <img src="#" alt="подарок" />
+          <p>Поставляется в подарочной упаковке</p>
+        </div>
+      </div>
+      </div>
+    </div>
+    <div class="reviews">
+      <h2 class="reviews__title">Отзывы</h2>
+      <p class="reviews__text-reviews">
+        Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+      </p>
+      <span  class="reviews__name-author">Анастасия Красильникова</span>
+      <span class="reviews__email-autor">@misssssiskras</span>
+      <button class=" reviews__prev" type=" button" >Предыдущий отзыв</button>
+      <button class=" reviews__next" type=" button" >Следующий отзыв</button>
+      <a class="reviews__write-reviws" href="#">Написать</a>
+    <div class="contacts">
+      <h2 class="contacts__title">Контакты</h2>
+      <div class="contacts-email">
+        <span class="contacts-email__field-name">e-mail:</span>
+        <span class="contacts-email__email-name">info@mimimishkashop.ru</span>
+      </div>
+      <div class="contact-address">
+        <span class="contacts-adress__field-name">адрес:</span>
+        <span class="contacts-adress__adress">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span>
+      </div>
+      <div class="map">
+        <img alt="карта" src="#"/>
+      </div>
+      <a class="contact__write-us" href="#">Напишите нам</a>
+    </div>
+    <footer class="page-footer">
+      <div class="page-footer__social">
+        <span class="social-links">
+          <a class="social-links__instagram" href=""></a>
+          <a class="social-links__fb" href=""></a>
+          <a class="social-links__twiter" href=""></a>
+        </span>
+      </div>
+      <div class="page-footer__copyright" >
+        Разработано:
+        <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy. ru/intensive/adaptive" >HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
