исправил тег бэм элемента

--- a/form.html
+++ b/form.html
@@ -47,27 +47,27 @@
             <span class="filter-color__title">Цвет</span>
             <span class="horizontal-line"></span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="white" value="white" checked>
             <span class="filter-color_text">Белый</span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="grey" value="grey" checked>
             <span class="filter-color_text">Серый</span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="tiffani" value="tiffani">
             <span class="filter-color_text">"Тиффани"</span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="black" value="black">
             <span class="filter-color_text">Черный</span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="pink" value="pink">
             <span class="filter-color_text">Розовый</span>
           </div>
-          <div class="filter-color_item">
+          <div class="filter-color__item">
             <input type="checkbox" name="orange" value="orange">
             <span class="filter-color_text">Оранжевый</span>
           </div>
