--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header" >
       <div class="page-header__inner">
         <div class="logo">
-          <a href="#"></a>
+          <a href="#"><img src="http://placehold.it/150x100" alt="Логотип" /> </a>
         </div>
         <nav class="main-nav">
           <ul class="main-nav__list">
