--- a/index.html
+++ b/index.html
@@ -10,123 +10,107 @@
         <div class="logo">
           <a href="#"><img src="http://placehold.it/150x100" alt="Логотип" /> </a>
         </div>
+        <button class="main-nav-toggle" type="botton">Открыть меню</button>
         <nav class="main-nav">
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a href ="#">Каталог товаров</a> </li>
+            <li class="main-nav__item"><a href ="#">Каталог товаров</a></li>
             <li class="main-nav__item"><a href ="#">Вязание на заказ</a></li>
             <li class="main-nav__item"><a href ="#">Поиск по сайту</a></li>
             <li class="main-nav__item"><a href ="#">Корзина: пока пуста</a></li>
           </ul>
         </nav>
       </div>
-      <div class="page-header__title">
-        <h1>Милые штуки ручной работы для дома</h1>
-      </div>
-      <div class="header-preview">
-        <div class="header-preview__interior">
-          <p class="header-preview__title">
-            Предметы интерьера
-          </p>
-        </div>
-        <div class="header-preview__toys">
-          <p class="header-preview__title">
-            Детские игрушки
-          </p>
-        </div>
-      </div>
     </header>
-    <div class="featured">
-      <h2 class="featured__title">Вязаные корзинки</h2>
-      <p class="featured__product-week">Товар недели</p>
-      <div class="feature-product">
-        <p class="feature-product__description">
-          Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
-        </p>
-        <div class="product-color">
-          <div class="product-color__name">
-            <p>Цвет:</p>
+    <div class="main">
+      <div class="page-preview">
+        <div class="page-preview__title">
+          <h1>Милые штуки ручной работы для дома</h1>
+        </div>
+        <div class="page-preview__production">
+          <div class="page-preview__item">
+            <p>Предметы интерьера</p>
           </div>
-          <div class="product-color__value">
-            <p>«Тиффани»/серый</p>
+          <div class="page-preview__item">
+            <p>Детские игрушки</p>
           </div>
         </div>
-        <div class="product-diameter">
-          <div class="product-diameter__name">
-            <p>Диаметр:</p>
+      </div>
+      <div class="featured">
+        <h2 class="featured__title">Вязаные корзинки</h2>
+        <p class="featured__product-week">Товар недели</p>
+        <div class="feature-product">
+          <p class="feature-product__description">
+            Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
+          </p>
+          <table class="feature-product__list">
+            <tr><td>Цвет:</td><td>«Тиффани»/серый</td></tr>
+            <tr><td>Диаметр:</td><td>25 см</td></tr>
+            <tr><td>Высота:</td><td>15 см</td></tr>
+          </table>
+          <div class="featured__image">
+            <img alt="изображение продукта" src="#" />
           </div>
-          <div class="product-diameter__value">
-            <p>25 см</p>
+          <span class="featured__price">Цена: 990 руб.</span>
+          <a class="featured__buy">Заказать</a>
+        </div>
+      </div>
+      <div class="about">
+        <h2 class="about__title">Коротко о нас</h2>
+        <div class="about__list">
+          <div class="about__item">
+            <img src="#" alt="цветок" />
+            <p>Экологически чистые материалы</p>
+          </div>
+          <div class="about__item">
+            <img src="#" alt="прямоугольник" />
+            <p>Скандинавский стиль по российской цене</p>
+          </div>
+          <div class="about__item">
+            <img src="#" alt="сердце" />
+            <p>Увеличивает лайки на фотографиях</p>
+          </div>
+          <div class="about__item">
+            <img src="#" alt="пряжа" />
+            <p>Связано вручную с любовью и умилением</p>
+          </div>
+          <div class="about__item">
+            <img src="#" alt="ракета" />
+            <p>Поддержка отечественного производителя</p>
+          </div>
+          <div class="about__item">
+            <img src="#" alt="подарок" />
+            <p>Поставляется в подарочной упаковке</p>
           </div>
         </div>
-        <div class="product-height">
-          <div class="product-height__name">
-            <p>Высота:</p>
+      </div>
+      <div class="reviews">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__list">
+          <div class="reviews__item">
+            <p>
+              Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            </p>
+            <span  class="reviews__name-author">Анастасия Красильникова</span>
+            <span class="reviews__email-autor">@misssssiskras</span>
           </div>
-          <div class="product-height__value">
-            <p>15 см</p>
-          </div>
         </div>
-        <div class="featured__image">
-          <img alt="изображение продукта" src="#" />
+        <div class="control">
+          <button class=" reviews__prev" type=" button" >Предыдущий отзыв</button>
+          <button class=" reviews__next" type=" button" >Следующий отзыв</button>
         </div>
-        <span class="featured__price">Цена: 990 руб.</span>
-        <a class="featured__buy">Заказать</a>
+        <a class="reviews__write-reviws" href="#">Написать</a>
       </div>
-    </div>
-    <div class="about">
-      <h2 class="about__title">Коротко о нас</h2>
-      <div class="about__list">
-        <div class="about__item">
-          <img src="#" alt="цветок" />
-          <p>Экологически чистые материалы</p>
+      <div class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__list">
+          <tr><td>e-mail:</td><td>info@mimimishkashop.ru</td></tr>
+          <tr><td>адрес:</td><td>г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</td></tr>
+        </table>
+        <div class="map">
+          <img alt="карта" src="#"/>
         </div>
-        <div class="about__item">
-          <img src="#" alt="прямоугольник" />
-          <p>Скандинавский стиль по российской цене</p>
-        </div>
-        <div class="about__item">
-          <img src="#" alt="сердце" />
-          <p>Увеличивает лайки на фотографиях</p>
-        </div>
-        <div class="about__item">
-          <img src="#" alt="пряжа" />
-          <p>Связано вручную с любовью и умилением</p>
-        </div>
-        <div class="about__item">
-          <img src="#" alt="ракета" />
-          <p>Поддержка отечественного производителя</p>
-        </div>
-        <div class="about__item">
-          <img src="#" alt="подарок" />
-          <p>Поставляется в подарочной упаковке</p>
-        </div>
+        <a class="contact__write-us" href="#">Напишите нам</a>
       </div>
-      </div>
-    </div>
-    <div class="reviews">
-      <h2 class="reviews__title">Отзывы</h2>
-      <p class="reviews__text-reviews">
-        Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
-      </p>
-      <span  class="reviews__name-author">Анастасия Красильникова</span>
-      <span class="reviews__email-autor">@misssssiskras</span>
-      <button class=" reviews__prev" type=" button" >Предыдущий отзыв</button>
-      <button class=" reviews__next" type=" button" >Следующий отзыв</button>
-      <a class="reviews__write-reviws" href="#">Написать</a>
-    <div class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <div class="contacts-email">
-        <span class="contacts-email__field-name">e-mail:</span>
-        <span class="contacts-email__email-name">info@mimimishkashop.ru</span>
-      </div>
-      <div class="contact-address">
-        <span class="contacts-adress__field-name">адрес:</span>
-        <span class="contacts-adress__adress">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span>
-      </div>
-      <div class="map">
-        <img alt="карта" src="#"/>
-      </div>
-      <a class="contact__write-us" href="#">Напишите нам</a>
     </div>
     <footer class="page-footer">
       <div class="page-footer__social">
