разметка index-mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>Милые штуки ручной <br /> работы для дома</h1>
       </div>
       <div class="page-preview__production">
-        <div class="page-preview__item">
+        <div class="page-preview__item page-preview__item--ico ">
           <p>Предметы интерьера</p>
         </div>
         <div class="page-preview__item page-preview__item--color">
@@ -140,7 +140,7 @@
     </div>
     <div class="page-footer__copyright">
       Разработано:
-      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy. ru/intensive/adaptive">HTML Academy</a>
+      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
     </div>
   </footer>
 </body>
