--- a/form.html
+++ b/form.html
@@ -4,21 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Мишка заказ</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__inner">
       <div class="logo">
-        <a href="#"><img src="http://placehold.it/150x100" alt="Логотип" /> </a>
+        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <button class="main-nav-toggle" type="botton">Открыть меню</button>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Каталог товаров</a> </li>
+          <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
           <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
-          <li class="main-nav__item"><a href="#">Поиск по сайту</a></li>
-          <li class="main-nav__item"><a href="#">Корзина: пока пуста</a></li>
+          <li class="main-nav__item main-nav__item--ico-serch"><a href="#">Поиск по сайту</a></li>
+          <li class="main-nav__item main-nav__item--icon-cart"><a href="#">Корзина: пока пуста</a></li>
         </ul>
       </nav>
     </div>
@@ -125,12 +126,12 @@
       <span class="social-links">
           <a class="social-links__instagram" href=""></a>
           <a class="social-links__fb" href=""></a>
-          <a class="social-links__twiter" href=""></a>
+          <a class="social-links__twitter" href=""></a>
         </span>
     </div>
     <div class="page-footer__copyright">
       Разработано:
-      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy. ru/intensive/adaptive">HTML Academy</a>
+      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
     </div>
   </footer>
 </body>
