Начало верстки с form

--- a/catalog.html
+++ b/catalog.html
@@ -11,13 +11,13 @@
   <header class="page-header">
     <div class="page-header__inner">
       <div class="logo">
-        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+        <a href="index.html"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <button class="main-nav-toggle" type="botton">Открыть меню</button>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
-          <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
+          <li class="main-nav__item"><a>Каталог товаров</a></li>
+          <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
           <li class="main-nav__item main-nav__item--ico-serch"><a href="#">Поиск по сайту</a></li>
           <li class="main-nav__item main-nav__item--icon-cart"><a href="#">Корзина: пока пуста</a></li>
         </ul>
