--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <button class="main-nav-toggle" type="botton">Открыть меню</button>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
-          <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
+          <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
           <li class="main-nav__item main-nav__item--ico-serch"><a href="#">Поиск по сайту</a></li>
           <li class="main-nav__item main-nav__item--icon-cart"><a href="#">Корзина: пока пуста</a></li>
         </ul>
