--- a/form.html
+++ b/form.html
@@ -37,17 +37,17 @@
           <span class="filter-type__title">Тип</span>
         </div>
         <div class="filter-type__item">
-          <input type="radio" id="accessories-interior" checked name="accessories-interior" value="check-accessories">
-          <label for="accessories-interior"><span class="filter-type__text">Аксессуар для интерьера</span></lable>
+          <input type="radio" class="filter-type-radio" id="accessories-interior" checked name="filter-type-radio" value="check-accessories">
+          <label for="accessories-interior" class="filter-type__text">Аксессуар для интерьера</lable>
         </div>
         <div class="filter-type__item">
-          <input type="radio" id="children-toy" name="children-toy" value="check-children-toy">
-          <label for="children-toy"><span class="filter-type__text">Детская игрушка</span></lable>
+          <input type="radio" id="children-toy" class="filter-type-radio" name="filter-type-radio" value="check-children-toy">
+          <label for="children-toy" class="filter-type__text">Детская игрушка</lable>
         </div>
       </div>
       <div class="filter-color">
         <div class="filter-type__header">
-          <span class="filter-color__title">Цвет</span>
+          <span class="filter-color__title ">Цвет</span>
         </div>
         <div class="filter-color__item">
           <input type="checkbox" id="color-white" name="color-white" value="white" checked>
@@ -78,15 +78,15 @@
         <div class="user-info__header">
           <span class="user-info__title">фио</span>
         </div>
-        <div class="user-name">
+        <div class="user-info-item-name">
           <lable class="user-info__input-title" for="name">Имя</lable>
           <input class="user-info__input-text" type="text" name="user-name" id="name" placeholder="Введите ваше имя*" />
         </div>
-        <div class="user-surname">
+        <div class="user-info-item-name">
           <lable class="user-info__input-title" for="surname">Фамилия</lable>
           <input class="user-info__input-text" type="text" name="user-surname" id="surname" placeholder="Укажите фамилию*" />
         </div>
-        <div class="user-patronymic">
+        <div class="user-info-item-name">
           <lable class="user-info__input-title" for="patronymic">Отчество</lable>
           <input class="user-info__input-text" type="text" name="user-patronymic" id="patronymic" placeholder="Отчество, если желаете" />
         </div>
