--- a/form.html
+++ b/form.html
@@ -78,32 +78,32 @@
         <div class="user-info__header">
           <span class="user-info__title">фио</span>
         </div>
-        <div class="user-info-item-name">
+        <div class="user-info-item">
           <lable class="user-info__input-title" for="name">Имя</lable>
-          <input class="user-info__input-text" type="text" name="user-name" id="name" placeholder="Введите ваше имя*" />
+          <input class="user-info__input-value" type="text" name="user-name" id="name" placeholder="Введите ваше имя*" />
         </div>
-        <div class="user-info-item-name">
+        <div class="user-info-item">
           <lable class="user-info__input-title" for="surname">Фамилия</lable>
-          <input class="user-info__input-text" type="text" name="user-surname" id="surname" placeholder="Укажите фамилию*" />
+          <input class="user-info__input-value" type="text" name="user-surname" id="surname" placeholder="Укажите фамилию*" />
         </div>
-        <div class="user-info-item-name">
+        <div class="user-info-item">
           <lable class="user-info__input-title" for="patronymic">Отчество</lable>
-          <input class="user-info__input-text" type="text" name="user-patronymic" id="patronymic" placeholder="Отчество, если желаете" />
+          <input class="user-info__input-value" type="text" name="user-patronymic" id="patronymic" placeholder="Отчество, если желаете" />
         </div>
-        <div class="user-phone">
-          <div class="user-phone__header">
+        <div class="user-info-item">
+          <div class="user-info__header">
             <span class="user-info__title">тел</span>
           </div>
           <div class="user-phone__icon-phone">
-            <input class="user-phone__input-phone" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХХ-ХХ-ХХ*" />
+            <input class="user-info__input-value" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХХ-ХХ-ХХ*" />
           </div>
         </div>
-        <div class="user-email">
-          <div class="user-email__header">
+        <div class="user-info-item">
+          <div class="user-info__header">
             <span class="user-info__title">e-mail</span>
           </div>
           <div class="user-email__icon-email">
-            <input class="user-email__input-email" type="email" name="user-email" id="email" placeholder="Ваш Email*" required="2222" />
+            <input class="user-info__input-value" type="email" name="user-email" id="email" placeholder="Ваш Email*" required="2222" />
           </div>
         </div>
         <div class="additionally">
