--- a/index.html
+++ b/index.html
@@ -113,24 +113,29 @@
       <a class="reviews__write-reviws" href="#">Написать</a>
     </div>
     <div class="contacts">
-      <h2 class="contacts__title">Контакты</h2>
-      <table class="contacts__list">
-        <tr>
-          <td>e-mail:</td>
-          <td>info@mimimishkashop.ru</td>
-        </tr>
-        <tr>
-          <td>адрес:</td>
-          <td>г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</td>
-        </tr>
-      </table>
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__list">
+          <tr>
+            <td class="contacts__field">e-mail:</td>
+            <td class="contacts__value">info@mimimishkashop.ru</td>
+          </tr>
+          <tr>
+            <td class="contacts__field">адрес:</td>
+            <td class="contacts__value">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</td>
+          </tr>
+        </table>
+      </div>
       <div class="map">
         <img alt="карта" src="img\map-mobile@1x.jpg" />
       </div>
-      <a class="contact__write-us" href="#">Напишите нам</a>
+      <a class="contacts__write-us" href="#">Напишите нам</a>
     </div>
   </div>
   <footer class="page-footer">
+    <div class="page-footer__logo">
+      <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+    </div>
     <div class="page-footer__social">
       <span class="social-links">
           <a class="social-links__instagram" href=""></a>
