--- a/catalog.html
+++ b/catalog.html
@@ -84,12 +84,15 @@
     </div>
   </div>
   <footer class="page-footer">
+    <div class="page-footer__logo">
+      <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+    </div>
     <div class="page-footer__social">
       <span class="social-links">
-            <a class="social-links__instagram" href=""></a>
-            <a class="social-links__fb" href=""></a>
-            <a class="social-links__twitter" href=""></a>
-          </span>
+          <a class="social-links__instagram" href=""></a>
+          <a class="social-links__fb" href=""></a>
+          <a class="social-links__twitter" href=""></a>
+        </span>
     </div>
     <div class="page-footer__copyright">
       Разработано:
