--- a/form.html
+++ b/form.html
@@ -122,6 +122,9 @@
     </div>
   </div>
   <footer class="page-footer">
+    <div class="page-footer__logo">
+      <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+    </div>
     <div class="page-footer__social">
       <span class="social-links">
           <a class="social-links__instagram" href=""></a>
