--- a/form.html
+++ b/form.html
@@ -23,11 +23,12 @@
         </ul>
       </nav>
     </div>
-    <div class="page-header__title">
-      <h1>Вязание на заказ</h1>
-    </div>
+
   </header>
   <div class="order-form">
+    <div class="order-form__title">
+      <h1>Вязание на заказ</h1>
+    </div>
     <form action="https://echo.htmlacademy.ru/" method="post">
       <p class="order-form__description">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
@@ -118,8 +119,8 @@
           *Поля обязательны для заполнения
         </p>
         <button class="button-order-form" type="submit">Отправить заказ</button>
+      </div>
     </form>
-    </div>
   </div>
   <footer class="page-footer">
     <div class="page-footer__logo">
