--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <li class="main-nav__item"><a href="#">Распродажа</a></li>
         </ul>
       </nav>
-      <div class="header__user-menu">
-        <ul class="secondary-menu">
-          <li class="secondary-menu__item">
+      <div class="page-header__user-menu">
+        <ul class="secondary-menu-list">
+          <li class="secondary-menu__item secondary-menu__item--search">
             <a href="#">
               <img class="icon-search" src="../img/icon-search.svg" alt="" />
               Поиск по сайту
@@ -39,7 +39,7 @@
           </li>
         </ul>
       </div>
-      <div class="header__text-delivery">
+      <div class="page-header__text-delivery">
           Бесплатная доставка по России
       </div>
     </div>
