--- a/form.html
+++ b/form.html
@@ -118,36 +118,38 @@
           </div>
         </div>
       </div>
-      <div class="user-info-add">
-        <div class="user-info-item">
-          <div class="user-info__header">
-            <span class="user-info__title">тел</span>
+      <div class="user-info user-info--color">
+      <div class="user-info__wrapper">
+          <div class="user-info-item">
+            <div class="user-info__header">
+              <span class="user-info__title">тел</span>
+            </div>
+            <div class="user-phone__icon-phone">
+              <input class="user-info__input-value" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХХ-ХХ-ХХ*" />
+            </div>
           </div>
-          <div class="user-phone__icon-phone">
-            <input class="user-info__input-value" type="tel" name="user-phone" id="tel" placeholder="+7 ХХХ ХХХ-ХХ-ХХ*" />
-          </div>
-        </div>
-        <div class="user-info-item">
-          <div class="user-info__header">
-            <span class="user-info__title">e-mail</span>
-          </div>
-          <div class="user-email__icon-email">
-            <input class="user-info__input-value" type="email" name="user-email" id="email" placeholder="Ваш Email*" required="2222" />
-          </div>
-        </div>
-        <div class="additionally">
-          <div class="additionally__header">
-            <span class="user-info__title">доп</span>
-          </div>
-          <div class="additionally__textarea">
-            <textarea placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <div class="user-info-item">
+            <div class="user-info__header">
+              <span class="user-info__title">e-mail</span>
+            </div>
+            <div class="user-email__icon-email">
+              <input class="user-info__input-value" type="email" name="user-email" id="email" placeholder="Ваш Email*" required="2222" />
+            </div>
           </div>
         </div>
-        <p class="order-form__must-field">
-          *Поля обязательны для заполнения
-        </p>
-        <button class="button-order-form" type="submit">Отправить заказ</button>
       </div>
+      <div class="additionally">
+        <div class="additionally__header">
+          <span class="user-info__title">доп</span>
+        </div>
+        <div class="additionally__textarea">
+          <textarea placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </div>
+      </div>
+      <p class="order-form__must-field">
+        *Поля обязательны для заполнения
+      </p>
+      <button class="button-order-form" type="submit">Отправить заказ</button>
     </form>
   </div>
   <footer class="page-footer">
