--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
   <header class="page-header">
     <div class="page-header__wrapper">
       <div class="logo">
-        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+        <a href="index.html"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
       </div>
       <nav class="main-nav">
         <button class="main-nav-toggle" type="botton">X</button>
@@ -153,19 +153,21 @@
     </form>
   </div>
   <footer class="page-footer">
-    <div class="page-footer__logo">
-      <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
-    </div>
-    <div class="page-footer__social">
-      <span class="social-links">
-          <a class="social-links__instagram" href=""></a>
-          <a class="social-links__fb" href=""></a>
-          <a class="social-links__twitter" href=""></a>
-        </span>
-    </div>
-    <div class="page-footer__copyright">
-      Разработано:
-      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
+    <div class="page-footer-wrapper">
+      <div class="page-footer__logo">
+        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+      </div>
+      <div class="page-footer__social">
+        <span class="social-links">
+            <a class="social-links__instagram" href=""></a>
+            <a class="social-links__fb" href=""></a>
+            <a class="social-links__twitter" href=""></a>
+          </span>
+      </div>
+      <div class="page-footer__copyright">
+        Разработано:
+        <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
+      </div>
     </div>
   </footer>
 </body>
