--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       </div>
       <a class="reviews__write-reviws" href="#">Написать</a>
     </div>
-    <div class="contacts">
+    <div class="contacts clearfix">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Контакты</h2>
         <table class="contacts__list">
@@ -146,25 +146,27 @@
         </table>
       </div>
       <div class="map">
-        <img alt="карта" src="img\map-mobile@1x.jpg" />
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424124077!2d30.32089461622911!3d59.93879686904776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1490171700855" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <a class="contacts__write-us" href="#">Напишите нам</a>
     </div>
   </div>
   <footer class="page-footer">
-    <div class="page-footer__logo">
-      <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
-    </div>
-    <div class="page-footer__social">
-      <span class="social-links">
-          <a class="social-links__instagram" href=""></a>
-          <a class="social-links__fb" href=""></a>
-          <a class="social-links__twitter" href=""></a>
-        </span>
-    </div>
-    <div class="page-footer__copyright">
-      Разработано:
-      <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
+    <div class="page-footer-wrapper">
+      <div class="page-footer__logo">
+        <a href="#"><img src="img\logo-mobile.svg" alt="Логотип" /> </a>
+      </div>
+      <div class="page-footer__social">
+        <span class="social-links">
+            <a class="social-links__instagram" href=""></a>
+            <a class="social-links__fb" href=""></a>
+            <a class="social-links__twitter" href=""></a>
+          </span>
+      </div>
+      <div class="page-footer__copyright">
+        Разработано:
+        <a class=" btn page-footer__copyright-link" href=" https: //htmlacademy.ru/intensive/adaptive"></a>
+      </div>
     </div>
   </footer>
 </body>
