--- a/catalog.html
+++ b/catalog.html
@@ -44,6 +44,11 @@
     </div>
   </header>
   <div class="main">
+    <div class="main-header">
+      <div class="main-header__title">
+        <h1>Каталог товаров</h1>
+      </div>
+    </div>
     <div class="catalog">
       <div class="catalog__item">
         <div class="catalog-item-image">
