поле отправить в форме

--- a/catalog.html
+++ b/catalog.html
@@ -90,7 +90,7 @@
         </section>
       </div>
     </div>
-    <div class="video">
+    <div class="video clearfix">
       <div class="video-header">
         <span class="video-header__camera"></span>
         <h3>Процесс производства</h3>
