--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <h1>Милые штуки ручной <br /> работы для дома</h1>
       </div>
       <div class="page-preview__production">
-        <div class="page-preview__item page-preview__item--ico">
+        <a href="#" class="page-preview__item page-preview__item--ico">
           <p>Предметы интерьера</p>
-        </div>
-        <div class="page-preview__item page-preview__item--color">
+        </a>
+        <a href="#" class="page-preview__item page-preview__item--color">
           <p>Детские игрушки</p>
-        </div>
+        </a>
       </div>
     </div>
     <div class="featured">
@@ -126,8 +126,8 @@
         </div>
       </div>
       <div class="control">
-        <button class=" reviews__prev" type=" button">Предыдущий отзыв</button>
-        <button class=" reviews__next" type=" button">Следующий отзыв</button>
+        <button class=" reviews__prev" type=" button"></button>
+        <button class=" reviews__next" type=" button"></button>
       </div>
       <a class="reviews__write-reviws" href="#">Написать</a>
     </div>
